add_executable(train_lenet_classifier train_lenet_classifier.cpp)
add_executable(train_resnet_classifier train_resnet_classifier.cpp)
add_executable(train_vae train_vae.cpp)
add_executable(train_dcgan train_dcgan.cpp)
add_executable(train_siamese train_siamese.cpp)
add_executable(train_vat train_vat.cpp)
find_package(ZLIB REQUIRED)
include_directories(${ZLIB_INCLUDE_DIRS})
target_link_libraries(train_lenet_classifier nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_lenet_classifier PROPERTY CXX_STANDARD 11)
target_link_libraries(train_resnet_classifier nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_resnet_classifier PROPERTY CXX_STANDARD 11)
target_link_libraries(train_vae nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_vae PROPERTY CXX_STANDARD 11)
target_link_libraries(train_dcgan nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_dcgan PROPERTY CXX_STANDARD 11)
target_link_libraries(train_siamese nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_siamese PROPERTY CXX_STANDARD 11)
target_link_libraries(train_vat nnabla ${ZLIB_LIBRARIES})
set_property(TARGET train_vat PROPERTY CXX_STANDARD 11)
